syntax = 'proto3';

package api;

import "google/protobuf/timestamp.proto";
import "internal/armada/api/queue.proto";
import "google/protobuf/empty.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";

message JobSubmittedEvent {
    string JobId = 1;
    string JobSetId = 2;
    string Queue = 3;
    google.protobuf.Timestamp Created = 4 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
    Job Job = 5 [(gogoproto.nullable) = false];
}

message JobQueuedEvent {
    string JobId = 1;
    string JobSetId = 2;
    string Queue = 3;
    google.protobuf.Timestamp Created = 4 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
}

message JobLeasedEvent {
    string JobId = 1;
    string JobSetId = 2;
    string Queue = 3;
    google.protobuf.Timestamp Created = 4 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
    string ClusterId = 5;
}

message JobLeaseExpired {
    string JobId = 1;
    string JobSetId = 2;
    string Queue = 3;
    google.protobuf.Timestamp Created = 4 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
}

message JobPendingEvent {
    string JobId = 1;
    string JobSetId = 2;
    string Queue = 3;
    google.protobuf.Timestamp Created = 4 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
    string ClusterId = 5;
}

message JobRunningEvent {
    string JobId = 1;
    string JobSetId = 2;
    string Queue = 3;
    google.protobuf.Timestamp Created = 4 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
    string ClusterId = 5;
}

message JobFailedEvent {
    string JobId = 1;
    string JobSetId = 2;
    string Queue = 3;
    google.protobuf.Timestamp Created = 4 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
    string ClusterId = 5;
}

message JobSucceededEvent {
    string JobId = 1;
    string JobSetId = 2;
    string Queue = 3;
    google.protobuf.Timestamp Created = 4 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
    string ClusterId = 5;
}

message JobReprioritizedEvent {
    string JobId = 1;
    string JobSetId = 2;
    string Queue = 3;
    google.protobuf.Timestamp Created = 4 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
}

message JobCancellingEvent {
    string JobId = 1;
    string JobSetId = 2;
    string Queue = 3;
    google.protobuf.Timestamp Created = 4 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
    string ClusterId = 5;
}

message JobCancelledEvent {
    string JobId = 1;
    string JobSetId = 2;
    string Queue = 3;
    google.protobuf.Timestamp Created = 4 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
    string ClusterId = 5;
}

message EventMessage {
    oneof events {
        JobSubmittedEvent submitted = 1;
        JobQueuedEvent queued = 2;
        JobLeasedEvent leased = 3;
        JobLeaseExpired leaseExpired = 4;
        JobPendingEvent pending = 5;
        JobRunningEvent running = 6;
        JobFailedEvent failed = 7;
        JobSucceededEvent succeeded = 8;
        JobReprioritizedEvent reprioritized = 9;
        JobCancellingEvent cancelling = 10;
        JobCancelledEvent cancelled = 11;
    }
}

message EventStreamMessage {
    string Id = 1;
    EventMessage message = 2;
}

message JobSetRequest {
    string Id = 1;
    bool Watch = 2;
    string FromMessageId = 3;
}

service Event {
    rpc Report (EventMessage) returns (google.protobuf.Empty);
    rpc GetJobSetEvents (JobSetRequest) returns (stream EventStreamMessage);
}
